# math-plus-plus

./: README.md  adaptive_result.json  adaptive_result_bkp.json  adaptive_training_data.jsonl  adaptive_training_data_2.jsonl  adaptive_training_data_bkp.jsonl  evaluation_data_bkp.json  evaluation_result_bkp.json  exp1_extended_training_data.jsonl  exp1_ll1_adaptive_training_data.jsonl  exp1_ll1_feedback_data.jsonl  exp1_ll1_inference_data.jsonl  exp1_ll2_feedback_data.jsonl  exp1_ll2_inference_data.jsonl  exp1_ll2_report_result.json  exp1_ll2_training_data.jsonl  exp1_o1mini_training_data.jsonl  exp1_test_data.jsonl  exp1_training_data.jsonl  exp2_extended_training_data.jsonl  exp2_ll1_feedback_data.jsonl  exp2_ll1_inference_data.jsonl  exp2_ll1_report_result.json  exp2_ll1_training_data.jsonl  exp2_ll2_feedback_data.jsonl  exp2_ll2_inference_data.jsonl  exp2_ll2_report_result.json  exp2_test_data.jsonl  exp2_training_data.jsonl  exp3_ll1_feedback_data.jsonl  exp3_ll1_inference_data.jsonl  exp3_ll1_report_result.json  exp3_ll1_training_data.jsonl  exp3_ll2_feedback_data.jsonl  exp3_ll2_inference_data.jsonl  exp3_ll2_report_result.json  exp3_test_data.jsonl  exp3_training_data.jsonl  exp4_training_data.jsonl  exp_ll1_adaptive_training_data.jsonl  (+18 more)
src/: main.py
src/evaluate_knowledge/: crew.py
src/evaluate_knowledge/config/: agents.yaml  (+1 more)
src/generate_adaptive_data/: crew.py
src/generate_adaptive_data_2/: crew.py
src/generate_initial_data/: crew.py
src/generate_initial_data_2/: crew.py
src/math_plus_plus/: crew.py  main.py
src/report_generator/: crew.py
(+11 files in other folders)
