[project]
name = "math_plus_plus"
version = "0.1.0"
description = "math-plus-plus using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
math_plus_plus = "math_plus_plus.main:run"
run_crew = "math_plus_plus.main:run"
train = "math_plus_plus.main:train"
replay = "math_plus_plus.main:replay"
test = "math_plus_plus.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
